my-custom-scheduler.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-custom-scheduler-pod
  namespace: kube-system
spec:
  containers:
    - command:
        - kube-scheduler
        - --address=127.0.0.1
        - --kubeconfig=/etc/kubernetes/scheduler.conf
        - --config=/etc/kubernetes/my-scheduler-config.yml

    - image: k8s.gcr.io/kube-scheduler-amd64:v1.27.1
      name: kube-scheduler
  # The pod definition does not specify replicas, as it is a single pod
