gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-gateway-nodeport
spec:
  selector:
    app.kubernetes.io/name: nginx-gateway # controller pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080
  type: NodePort
