service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30008
  selector:
    app: myapp
    type: front-end
  # The selector matches the labels in the pod template
