service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: blue
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30080
